--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.test.selenium</groupId>
-	<artifactId>MoneyKey_Assignment</artifactId>
+	<artifactId>TestNGWithPOM</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>MoneyKey_Assignment</name>
+	<name>TestNGWithPOM</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
